# LearnDjango

django-polls/: pyproject.toml
django-polls/django_polls.egg-info/: SOURCES.txt
django-polls/polls/: admin.py  models.py  tests.py
django-polls/polls/migrations/: 0001_initial.py
mysite/: db.sqlite3
mysite/env/: pyvenv.cfg
mysite/env/Scripts/: activate  activate.bat
mysite/mysite/: settings.py  urls.py
mysite/polls/: views.py
