[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls"
version = "0.1"
dependencies = [
    "django>=5.0",
]
description = "Aplikasi polling sederhana buatan saya"
readme = "README.rst"
requires-python = ">= 3.10"
authors = [
    {name = "Syauqi", email = "syauqi.shiddiq@outlook.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://www.example.com/"